Implmented link logic

--- a/src/app/actor-list/actor-list.component.html
+++ b/src/app/actor-list/actor-list.component.html
@@ -1,13 +1,13 @@
 <div>
   <h4>Actors</h4>
-  <a 
+  <a routerLink="/actors" [queryParams]="{showDetails: true}"
     >Show Details</a>
 
 
   <div *ngFor="let actor of actors; index as i"
     class="bg-dark text-light p-3 rounded mb-2"
     >
-    <a >{{(i+1) + '. ' + actor.name}}</a>
+    <a [routerLink]="['/actors', actor.id, 'edit']">{{(i+1) + '. ' + actor.name}}</a>
     <div *ngIf="showDetails">
       <div>Flop: {{actor.movieTitle}}</div>
       <div>DOB: {{actor.born}}</div>
