--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="nav bg-dark d-flex ">
-  <h3 class="text-light m-1"><a class="nav-link" >Flopbuster</a></h3>
+  <h3 class="text-light m-1"><a class="nav-link" routerLink="/" >Flopbuster</a></h3>
 
-  <a class="nav-link" >Actors</a>
+  <a class="nav-link" routerLink="/actors">Actors</a>
 </nav>
 
 <router-outlet></router-outlet>
